--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,9 @@ body{
     background: #512DAB;
 }
 
+.tab-content{
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
